--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -17,7 +17,7 @@
   font-weight: 700;
   color: var(--mantine-color-white);
   margin-bottom: rem(20px);
-  max-width: 500px;
+  max-width: 1000px;
   --framer-aspect-ratio-supported: auto;
   --framer-paragraph-spacing: 0px;
   pointer-events: auto;
@@ -66,4 +66,11 @@
 
 .titlenews {
   max-width: 700px;
+}
+
+/* Home.module.css */
+@media screen and (max-width: 767px) {
+  .mobileMargin {
+    margin-bottom: 16px; /* Adjust the margin-bottom value based on your preference */
+  }
 }
