fix: fix error on login page i dont know what happend, so basically i just copy my edited code to the file in repository and yeah its done hehee

--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -12,7 +12,7 @@
   color: white;
 }
 .title {
-  font-size: rem(68px);
+  /* font-size: rem(68px); */
   font-weight: 700;
   color: var(--mantine-color-white);
   margin-bottom: rem(20px);
